--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.10",
     "next": "15.3.2",
     "nextjs-toploader": "^3.8.16",
     "nodemailer": "^7.0.3",
@@ -20,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
     "react-spinners": "^0.17.0"
   },
   "devDependencies": {
