--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/react-scroll": "^1.8.10",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "15.3.2",
     "nextjs-toploader": "^3.8.16",
     "nodemailer": "^7.0.3",
