--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
