--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.20.2",
     "@prisma/client": "^6.8.2",
     "@types/react-scroll": "^1.8.10",
     "@vercel/analytics": "^1.5.0",
